--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,48 @@
+
 body {
-  background-color: blue;
+  margin: 0;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+h1 {
+  /* margin-top: 0; */
+  width: 10%;
+  margin: 0 auto;
+}
+
+.top-container {
+  background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
+  /* width: 200px;
+  height: 200px; */
+}
+
+.middle-container {
+  background-color: red;
+  width: 200px;
+  height: 200px;
+}
+
+.bottom-container {
+  background-color: green;
+  width: 200px;
+  height: 200px;
+}
+
+.pro {
+  text-decoration: underline;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
