--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,22 @@
-
 body {
   margin: 0;
   text-align: center;
-  font-family: sans-serif;
+  font-family: 'Luxurious Roman', cursive;
 }
 
 h1 {
   /* margin-top: 0; */
   width: 10%;
   margin: 0 auto;
+  font-family: 'Sacremento', cursive;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
 }
 
 .top-container {
@@ -20,15 +28,15 @@ h1 {
 }
 
 .middle-container {
-  background-color: red;
+  /* background-color: red;
   width: 200px;
-  height: 200px;
+  height: 200px; */
 }
 
 .bottom-container {
-  background-color: green;
+  /* background-color: green;
   width: 200px;
-  height: 200px;
+  height: 200px; */
 }
 
 .pro {
