--- a/css/styles.css
+++ b/css/styles.css
@@ -2,21 +2,33 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Luxurious Roman', cursive;
+  font-size: 200%;
 }
 
 h1 {
-  /* margin-top: 0; */
+  margin-top: 50px;
+  font-size: 5.625rem;
   width: 10%;
-  margin: 0 auto;
+  margin: 50px auto 0 auto;
   font-family: 'Sacremento', cursive;
+  color: #66BFBF;
+  /* line-height: 2; */
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  color: #66BFBF;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color: #11999E;
+}
+
+a {
+  color: #11999E;
 }
 
 .top-container {
