--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Luxurious Roman', cursive;
@@ -20,6 +21,7 @@ h2 {
   font-size: 2.5rem;
   font-weight: normal;
   color: #66BFBF;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -29,6 +31,24 @@ h3 {
 
 a {
   color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #EAF6F6
+}
+
+p {
+  line-height: 2;
+}
+
+hr {
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
 }
 
 .top-container {
@@ -40,29 +60,100 @@ a {
 }
 
 .middle-container {
+  margin: 100px 0;
   /* background-color: red;
   width: 200px;
   height: 200px; */
 }
 
 .bottom-container {
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
   /* background-color: green;
   width: 200px;
   height: 200px; */
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+
+.code-img {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.chili-img {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
 }
 
 .pro {
   text-decoration: underline;
 }
 
+.intro {
+  width: 30%;
+  margin: auto;
+}
+
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+.copyright {
+  color: #EAF6F6
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999db);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999db);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999db);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999db);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999db);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+/* .code-skill-description {
+  clear: left;
+}
+
+.chili-skill-description {
+  clear: right;
+} */
