--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,13 @@ h2 {
   font-weight: normal;
   color: #66BFBF;
   padding-bottom: 10px;
+  text-align: center;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
   color: #11999E;
+  text-align: center;
 }
 
 a {
@@ -42,6 +44,7 @@ a:hover {
 
 p {
   line-height: 2;
+  text-align: center;
 }
 
 hr {
@@ -65,6 +68,20 @@ hr {
 .bottom-container {
   background-color: #66BFBF;
   padding: 50px 0 20px;
+}
+
+.mountain-image {
+  display: block;
+  margin: auto;
+}
+.profile-image {
+  display: block;
+  margin: auto;
+}
+
+.profile {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .skill-row {
@@ -151,7 +168,7 @@ hr {
     text-align: center;
   }
 
-  .profile-image {
+  /* .profile-image {
     position: absolute;
-  }
+  } */
 }
