--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ p {
 
 /* Containers */
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #2D31FA;
   position: relative;
   padding-top: 100px;
 }
@@ -59,7 +59,7 @@ p {
 }
 
 .bottom-container {
-  background-color: #66BFBF;
+  background-color: #DFF6FF;
   padding: 50px 0 20px;
 }
 
@@ -81,6 +81,10 @@ p {
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
+}
+
+.skill-list {
+  text-align: center;
 }
 
 .code-img {
