--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ body {
   font-size: 200%;
 }
 
+button {
+  display: block;
+  padding: 10px 24px;
+}
+
 h1 {
   margin-top: 50px;
   font-size: 5.625rem;
