Fixed button for jobs and clean up.

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,16 @@ li {
   margin-right: auto;
 }
 
+.pressed {
+  box-shadow: 0 3px 4px 0 #DBEDF3;
+  opacity: 0.5;
+}
+
+.paneld {
+  box-shadow: 0 3px 4px 0 #DBEDF3;
+  opacity: 0.5;
+}
+
 .skills {
   margin: auto 10%;
 }
