--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ h1 {
   margin: 50px auto 0 auto;
   font-family: 'Sacremento', cursive;
   color: #66BFBF;
-  /* line-height: 2; */
 }
 
 h2 {
@@ -53,14 +52,13 @@ p {
 }
 
 li {
-  list-style-position: inside;
+  margin: auto 5%;
 }
 
 td {
   color: blue;
   text-align: left;
   padding: 8px;
-
 }
 
 /* Containers */
@@ -104,13 +102,8 @@ td {
 }
 
 .skills {
-  margin: auto 10%;
+  margin: auto 25%;
 }
-/* .skill-row {
-  width: 50%;
-  margin: 100px auto 100px auto;
-  text-align: left;
-} */
 
 .skill-list {
   margin-left: auto;
@@ -142,7 +135,7 @@ td {
 .intro {
   width: 40%;
   text-align: left;
-  margin: auto;
+  margin: auto 30%;
 }
 
 .top-cloud {
@@ -169,14 +162,13 @@ td {
 }
 
 .work {
-  margin-top: 2vw;
+  margin: 1vw 30% auto;
   background-color: #5EE6EB;
   border: none;
-  width: 15vw;
-  /* height: 3vw; */
-  /* font-size: 1.5vw; */
+  width: 10vw;
   color: #FFFFFF;
   border-radius: 0.5vw;
+  font-size: 0.8vw;
   font-weight: bold;
   cursor: pointer;
 }
@@ -214,8 +206,4 @@ td {
   .top-container {
     text-align: center;
   }
-
-  /* .profile-image {
-    position: absolute;
-  } */
 }
